# nakama-rust

./: Cargo.toml  build.rs
proto/github.com/heroiclabs/nakama/apigrpc/: apigrpc.proto
proto/github.com/heroiclabs/nakama/rtapi/: realtime.proto
src/: api.rs  apigrpc.rs  apigrpc_grpc.rs  empty.rs  lib.rs  realtime.rs
tests/: api.rs
