[package]
name = "nakama"
version = "0.0.1"
authors = ["nitzan <nitzan@halo-digital.com>"]
edition = "2018"

[dependencies]
# protobuf = { version = "2", features = ["with-bytes"] }
grpc            = "^0.6.1"
protobuf        = "~2"
futures         = "~0.1"
futures-cpupool = "~0.1"

websocket       = { version = "^0.22.3", features = ["async"] }
bytes           = "0.4"
base64          = "0.10.1"

[build-dependencies]
protoc-rust-grpc = "0.6.1"

[dev-dependencies]
uuid = { version = "0.7", features = ["v4"] }
